# IdleCat

./: CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/src/Application/: Application.cpp  Application.h
Engine/src/Camera/: Camera.cpp  Camera.h
Engine/src/Layer/: Layer.h
Game/: CMakeLists.txt
Game/src/: EntryPoint.cpp  GameLayer.cpp  GameLayer.h
